--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App {
-  text-align: center;
+  text-align: none;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+  align: left;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #000;
   height: 150px;
   padding: 20px;
   color: white;
@@ -22,7 +23,12 @@
   font-size: large;
 }
 
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+a#library-link {
+
 }
